# Misa.ai

./: CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_INSTALL.md  README-LICENSE.md  README.md  VERIFICATION_REPORT.md  package.json
android/app/: build.gradle  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/misa/ai/: MainActivity.kt  MisaApplication.kt
android/app/src/main/java/com/misa/ai/ai/core/: AINoteProcessorImpl.kt
android/app/src/main/java/com/misa/ai/ai/ocr/: OCREngine.kt
android/app/src/main/java/com/misa/ai/automation/workflow/: TaskWorkflowEngine.kt
android/app/src/main/java/com/misa/ai/data/local/database/: CalendarDatabase.kt  TaskDatabase.kt
android/app/src/main/java/com/misa/ai/data/local/database/converter/: Converters.kt
android/app/src/main/java/com/misa/ai/data/local/database/dao/: EventDao.kt
android/app/src/main/java/com/misa/ai/data/local/database/entity/: EventEntity.kt  TaskEntity.kt
android/app/src/main/java/com/misa/ai/data/mapper/: CalendarMapper.kt
android/app/src/main/java/com/misa/ai/data/remote/: CalendarApiService.kt
android/app/src/main/java/com/misa/ai/data/repository/: CalendarRepositoryImpl.kt
android/app/src/main/java/com/misa/ai/domain/model/: CalendarEvent.kt  FileNode.kt  FocusSession.kt  Note.kt  Task.kt
android/app/src/main/java/com/misa/ai/domain/repository/: CalendarRepository.kt  FileRepository.kt  NoteRepository.kt  TaskRepository.kt
android/app/src/main/java/com/misa/ai/domain/usecase/calendar/: CreateEventUseCase.kt  GetEventsUseCase.kt  SuggestMeetingTimesUseCase.kt
android/app/src/main/java/com/misa/ai/domain/usecase/notes/: CreateNoteUseCase.kt
android/app/src/main/java/com/misa/ai/domain/usecase/tasks/: CreateTaskUseCase.kt  GetTaskRecommendationsUseCase.kt
android/app/src/main/java/com/misa/ai/installation/: AutoInstallerService.kt  InstallationGuideActivity.kt
android/app/src/main/java/com/misa/ai/scheduling/: TaskScheduler.kt
android/app/src/main/java/com/misa/ai/services/: DeviceDiscoveryService.kt
android/app/src/main/java/com/misa/ai/ui/apps/calendar/: CalendarScreen.kt  CalendarViewModel.kt
android/app/src/main/java/com/misa/ai/ui/apps/calendar/components/: CalendarScreen.kt
android/app/src/main/java/com/misa/ai/ui/apps/filehub/components/: FileHubScreen.kt
android/app/src/main/java/com/misa/ai/ui/apps/focus/components/: FocusTimerScreen.kt
android/app/src/main/java/com/misa/ai/ui/apps/notes/: NotesScreen.kt
android/app/src/main/java/com/misa/ai/ui/apps/tasks/components/: TaskListScreen.kt
android/app/src/main/java/com/misa/ai/update/: DownloadManager.kt  UpdateManager.kt  UpdateService.kt
android/app/src/main/java/com/misa/ai/utils/: VersionChecker.kt
android/app/src/main/res/xml/: file_paths.xml
cloud/backend/: Cargo.toml
cloud/backend/src/: main.rs
config/: default.toml
core/: Cargo.toml  Dockerfile
core/src/: errors.rs  lib.rs  main.rs
core/src/device/: mod.rs
core/src/kernel/: mod.rs
core/src/memory/: mod.rs
core/src/models/: mod.rs
core/src/plugin/: mod.rs
core/src/privacy/: mod.rs
core/src/security/: mod.rs
core/src/vision/: capture.rs  detection.rs  mod.rs
desktop/: Cargo.toml
desktop/src/: commands.rs  lib.rs  main.rs
desktop/src-tauri/: Cargo.toml
desktop/src/system-tray/: SystemTray.tsx
docs/user-guide/: README.md
docs/user-guide/getting-started/: installation.md  setup.md
infrastructure/docker/: .env.example  docker-compose-simple.yml  docker-compose.yml
infrastructure/docker/init-scripts/: 01-init.sql
infrastructure/docker/nginx/: nginx.conf
infrastructure/docker/prometheus/: prometheus.yml
installers/: README.md
installers/android/scripts/: release-build.sh  setup-signing.sh  upload.sh
installers/android/signing/: README.md
installers/windows/msi/: CustomActions.cs  CustomActions.csproj  Directory.wxs  Product.wxs  UI.wxs  build-msi.bat  build-msix.bat
installers/windows/msi/Properties/: AssemblyInfo.cs
installers/windows/msix/: MisaPackage.appxmanifest  MisaPackage.wxsproj  MisaSetupCoordinator.wxs
installers/windows/msix/Assets/: README.md
installers/windows/msix/scripts/: configure-app.ps1  install-coordinator.ps1  install-dependencies.ps1  install-prereqs.ps1
kernel/src/services/: upgrade_sync.rs
releases/: README.md
scripts/: build-all.sh  clean.sh  install-dependencies.sh  install.ps1  install.sh  mobile-coordinator.sh  setup-dev.sh  test.sh  upgrade.sh  windows-install-manager.ps1
shared/: package.json  tsconfig.json
shared/src/api/: base-client.ts  kernel-client.ts  mod.ts
shared/src/billing/: mod.ts  types.ts
shared/src/types/: auth.ts  common.ts  devices.ts  memory.ts  mod.ts  upgrade.ts
shared/types/: installation.ts
tests/integration/: kernel_integration_test.rs
web/: Dockerfile  nginx.conf  package.json
web/src/: App.tsx  main.tsx  package.json
web/src/components/setup/: AppsStep.tsx  CloudStep.tsx  CompleteStep.tsx  DeviceStep.tsx  ExpressSetup.tsx  QRPairing.tsx  SecurityStep.tsx  SetupWizard.tsx  WelcomeStep.tsx
web/src/components/upgrade/: UpgradeCoordinator.tsx
