[package]
name = "misa-core"
version = "0.1.0"
edition = "2021"
description = "MISA.AI Core Kernel - Hybrid AI orchestration engine"
authors = ["MISA.AI Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/misa-ai/misa.ai"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security and encryption
ring = "0.16"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
axum = "0.6"
tonic = "0.9"

# AI and ML integration
ollama-rs = "0.1"
candle-core = "0.3"
candle-transformers = "0.3"
candle-nn = "0.3"

# Image and OCR processing
image = "0.24"
tesseract = "0.13"

# Audio processing
rodio = "0.17"
cpal = "0.15"

# Device and system integration
nix = "0.27"
sysinfo = "0.29"

# Plugin system
libloading = "0.8"
wasmi = "0.31"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
async-trait = "0.1"
toml = "0.8"

# Dev dependencies
[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
criterion = "0.5"

[[bin]]
name = "misa-kernel"
path = "src/main.rs"

[lib]
name = "misa_core"
path = "src/lib.rs"

# Workspace members
[workspace]
members = [
    ".",
    "src/kernel",
    "src/models",
    "src/security",
    "src/device",
    "src/memory",
    "src/privacy"
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true