[package]
name = "misa-desktop"
version = "1.0.0"
description = "MISA.AI Desktop Application"
authors = ["MISA.AI Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/misa-ai/misa.ai"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ring = "0.16"
aes-gcm = "0.10"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
image = "0.24"
rodio = "0.17"
cpal = "0.15"
sysinfo = "0.29"
nix = "0.27"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]